test/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: demo-a-fake-api-ingress
  namespace: demo-a-app
spec:
  rules:
    - host: a-api.demohai.com
      http:
        paths:
          - backend:
              service:
                name: demo-a-fake-api
                port:
                  number: 8080
            path: /a-fake-api
            pathType: Prefix
