test/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-a-fake-api
  namespace: demo-a-app
spec:
  type: ClusterIP
  ports:
    - port: 8080
  selector:
    app: demo-a-fake-api
